<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/search_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rd_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/user_name" />

            <RadioButton
                android:id="@+id/rd_major"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_major" />

            <RadioButton
                android:id="@+id/rd_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_age" />

            <RadioButton
                android:id="@+id/rd_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_sex" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_search_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/related_content"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    </LinearLayout>

</LinearLayout>
